syntax = "proto3";

import "collections.proto";

package qdrant;

service CollectionsInternal {
  /*
 Get collection info
 */
  rpc Get (GetCollectionInfoRequestInternal) returns (GetCollectionInfoResponse) {}
  /*
  Initiate shard transfer
  */
  rpc Initiate (InitiateShardTransferRequest) returns (CollectionOperationResponse) {}
}

message GetCollectionInfoRequestInternal {
  GetCollectionInfoRequest get_collectionInfoRequest = 1;
  uint32 shard_id = 2;
}

message InitiateShardTransferRequest {
  string collection_name = 1; // Name of the collection
  uint32 shard_id = 2; // Id of the temporary shard
}